@@ -1,3 +1,4 @@
 [B]Version 1.1.109[/B]
 - fuxmovies - fix playback
 - cam4 - fix favorites (existing CAM4 favorites must be removed and re-added)
+- fullporner - fix listing
